// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly with no props 1`] = `
<blaze-tabs
  class="hydrated"
>
  <div
    class="c-tabs"
  >
    <div
      class="c-tabs__nav"
    >
      <div
        class="c-tabs__headings"
      >
        <div
          class="c-tab-heading"
        >
          
        </div>
        <div
          class="c-tab-heading"
        >
          
        </div>
      </div>
    </div>
    <!---->
    
      
    <blaze-tab>
      This is tab one
    </blaze-tab>
    
      
    <blaze-tab>
      This is tab two
    </blaze-tab>
    
    
  </div>
</blaze-tabs>
`;

exports[`Tabs renders correctly with props set 1`] = `
<blaze-tabs
  class="hydrated"
  type="brand"
>
  <div
    class="c-tabs c-tabs--brand"
  >
    <div
      class="c-tabs__nav"
    >
      <div
        class="c-tabs__headings"
      >
        <div
          class="c-tab-heading"
        >
          
        </div>
        <div
          class="c-tab-heading"
        >
          
        </div>
      </div>
    </div>
    <!---->
    
      
    <blaze-tab
      header="Tab one"
      open=""
    >
      This is tab one
    </blaze-tab>
    
      
    <blaze-tab
      disabled=""
      header="Tab two"
    >
      This is tab two
    </blaze-tab>
    
    
  </div>
</blaze-tabs>
`;
